# jam-engine

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: defaultUnlitShader.fs  defaultUnlitShader.vs  spriteRendererBoundingBox.fs  spriteRendererBoundingBox.vs
src/: constructorContext.h  game.cpp  game.h  gameinitdata.h  gametime.cpp  gametime.h  input.cpp  input.h  inputcomponenttest.h  logger.cpp  logger.h  main.cpp  resourceManager.cpp  resourceManager.h  resourcepool.cpp  resourcepool.h  shipcontroller.cpp  shipcontroller.h  window.cpp  window.h  world.cpp  world.h
src/graphics/: camera.h  graphiccontext.h  graphicsdevice.cpp  graphicsdevice.h  orthocamera.cpp  orthocamera.h  rendercontext.h  shader.cpp  shader.h  spriterenderer.cpp  spriterenderer.h  texture2d.cpp  texture2d.h
src/io/: input.cpp  input.h  keys.h
src/objects/: camera.h  component.cpp  component.h  constructorContext.h  entity.cpp  entity.h  irenderablecomponent.h  iupdateablecomponent.h  orthocamera.cpp  orthocamera.h  transform.h  world.cpp  world.h
src/utils/: constants.h  logger.h  macros.h  xplatformdefinitions.h
x/graphics/: graphicsdeviceopengl.cpp  graphicsdeviceopengl.h  shaderopengl.cpp  shaderopengl.h
x/io/: inputopengl.cpp  inputopengl.h
